# auto_rxn

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  __init__.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-mypy.yml  python-publish.yml  python-pytest.yml  run-entry-points.yml
adding-devices/: index.html
auto_rxn/: __init__.py  __main__.py  __version__.py  _device.py  _exceptions.py  _happi.py  _limits.py  _mks.py  _recipe.py  _run.py  _safety.py  _stage_unstage.py  _testing.py
auto_rxn/devices/: __init__.py  _fake_furnace.py  _fake_mfc.py  _reading.py  _status.py
auto_rxn/testing/: __init__.py  _with_happi_db.py  _with_limit_set_to.py
docs/: adding-devices.md  index.md  installation.md  limits.md  recipes.md
installation/: index.html
limits/: index.html
recipes/: index.html
search/: search_index.json
tests/: test_smoke.py
tests/children/: db.json  recipe.csv  test_children.py
tests/discrete/: continuous-config.toml  db.json  discrete-config.toml  recipe.csv  test_discrete.py
tests/fallback_position/: db.json  recipe.csv  test_fallback.py
tests/limits/: test_limits.py
tests/minimal_csv/: db.json  recipe.csv  test_minimal_csv.py
