[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flit.metadata]
module = "auto_rxn"
dist-name = "auto_rxn"
author = "auto_rxn developers"
home-page = "https://github.com/uw-madison-chem-shops/auto_rxn"
description-file = "README.md"
requires-python = ">=3.9"
requires = ["platformdirs",
            "click",
            "happi",
            "pandas",
            "bluesky",
            "suitcase-csv",
	    "tomli",
	    "tomli-w",
            ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/uw-madison-chem-shops/auto_rxn"
Issues = "https://github.com/uw-madison-chem-shops/auto_rxn/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
auto_rxn = "auto_rxn.__main__:main"

[tool.flit.entrypoints."happi.containers"]
fake_furnace = "auto_rxn.devices._fake_furnace"
fake_mfc = "auto_rxn.devices._fake_mfc"

[tool.black]
line-length = 99
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
