[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flit.metadata]
name = "auto_rxn"
author = "auto_rxn developers"
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
dependencies = ["platformdirs",
                "click",
                "happi",
                "pandas",
                "bluesky",
                "suitcase-csv",
	        "tomli",
      	        "tomli-w",
                 ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Source = "https://github.com/uw-madison-chem-shops/auto_rxn"
Issues = "https://github.com/uw-madison-chem-shops/auto_rxn/issues"
"Home Page" = "https://github.com/uw-madison-chem-shops/auto_rxn"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[project.scripts]
auto_rxn = "auto_rxn.__main__:main"

[tool.flit.entrypoints."happi.containers"]
fake_furnace = "auto_rxn.devices._fake_furnace"
fake_mfc = "auto_rxn.devices._fake_mfc"

[tool.hatch.version]
path = "auto_rxn/__version__.py"

[tool.black]
line-length = 99
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
